# Useful_Files

./: CMakeLists.txt  compare.cpp  imageconvert.cpp  resize.cpp  scale.cpp  virtual.cpp  webcam.cpp  webcam2.cpp
